apps/forgejo/components/tls/patch-sts.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: forgejo
spec:
  template:
    spec:
      containers:
        - name: forgejo
          livenessProbe:
            httpGet:
              scheme: HTTPS
          readinessProbe:
            httpGet:
              scheme: HTTPS
          startupProbe:
            httpGet:
              scheme: HTTPS
          volumeMounts:
            - name: tls
              mountPath: /etc/ssl/private
              readOnly: true
      volumes:
        - name: tls
          secret:
            items:
              - key: tls.crt
                path: tls.crt
              - key: tls.key
                mode: 640
                path: tls.key
            secretName: forgejo-tls
