apps/forgejo/components/tls/patch-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: forgejo
spec:
  ports:
    - name: https
      port: 443
      targetPort: http
