apps/forgejo/components/tls/patch-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: forgejo
spec:
  defaultBackend:
    service:
      name: forgejo
      port:
        name: https
